# XrKit-Package

./: Changelog.md  LICENSE  README.md  User Guide.ipynb  User_Guide.ipynb  code test.ipynb  setup.cfg  test.txt  xrkit库使用指南.ipynb
src/: file_management.py
src/xrkit/: __init__.py  data_processing.py  file_management.py
src/xrkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xrkit/: __init__.py  data_processing.py  file_management.py
