[metadata]
name = xrkit
version = 1.0
author = Xiaoran Wu
author_email = wu_xiaoran@outlook.com
description = A package for geographic research for personal use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SeanNg997/XrKit-Package
project_urls = 
	Bug Tracker = https://github.com/SeanNg997/XrKit-Package
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

